# bigman

bigman_control/: CMakeLists.txt  package.xml
bigman_control/config/: bigman_group_position_torque_lower_body.yaml  bigman_group_position_torque_whole_body.yaml
bigman_control/include/: utils.h
bigman_control/include/bigman_driver/: bigman_driver.h
bigman_control/include/bigman_kinematic/: bigman_kinematic.h
bigman_control/include/bigman_low_level_controller/: bigman_low_level_controller.h
bigman_control/include/inverse_dynamic_controller/: inverse_dynamic_controller.h
bigman_control/include/loadCSV/: loadCSV.hpp
bigman_control/include/quadprog/: quadprog.hpp
bigman_control/launch/: bigman_group_position_torque_lower_body.launch  bigman_group_position_torque_whole_body.launch
bigman_control/src/bigman_driver/: bigman_driver.cpp
bigman_control/src/bigman_kinematic/: bigman_kinematic.cpp
bigman_control/src/bigman_low_level_controller/: bigman_low_level_controller.cpp
bigman_control/src/inverse_dynamic_controller/: inverse_dynamic_controller.cpp
bigman_control/test/: test_bigman_driver.cpp  test_bigman_low_level_controller.cpp  test_inverse_dynamic_controller.cpp
bigman_gazebo/: CMakeLists.txt  package.xml
bigman_gazebo/database/: database.config
bigman_gazebo/launch/: bigman_fixed_base_lower_body.launch  bigman_fixed_base_whole_body.launch  bigman_floating_base_lower_body.launch  bigman_floating_base_whole_body.launch  bigman_world.launch
bigman_gazebo/sdf/conf/bigman/: bigman_gazebo.ini  bigman_gazebo_head.ini  bigman_gazebo_head_speed.ini  bigman_gazebo_head_torque.ini  bigman_gazebo_inertial.ini  bigman_gazebo_inertial2.ini  bigman_gazebo_left_arm.ini  bigman_gazebo_left_arm_ft.ini  bigman_gazebo_left_arm_speed.ini  bigman_gazebo_left_arm_torque.ini  bigman_gazebo_left_hand.ini  bigman_gazebo_left_leg.ini  bigman_gazebo_left_leg_ft.ini  bigman_gazebo_left_leg_speed.ini  bigman_gazebo_left_leg_torque.ini  bigman_gazebo_right_arm.ini  bigman_gazebo_right_arm_ft.ini  bigman_gazebo_right_arm_speed.ini  bigman_gazebo_right_arm_torque.ini  bigman_gazebo_right_hand.ini  bigman_gazebo_right_leg.ini  bigman_gazebo_right_leg_ft.ini  bigman_gazebo_right_leg_speed.ini  bigman_gazebo_right_leg_torque.ini  bigman_gazebo_torso.ini  bigman_gazebo_torso_speed.ini  bigman_gazebo_torso_torque.ini
bigman_urdf/: CMakeLists.txt  package.xml
bigman_urdf/config/: system_config.yaml
bigman_urdf/launch/: bigman.launch  bigman.rviz  bigman_capsules.launch
bigman_urdf/urdf/: bigman.urdf.xacro  bigman_base.urdf.xacro  bigman_robot.urdf.xacro
bigman_urdf/urdf/config/: bigman_only_legs.urdf.xacro  bigman_real.urdf.xacro
bigman_urdf/urdf/custom/: bigman_fixed_base_lower_body.urdf.xacro  bigman_fixed_base_whole_body.urdf.xacro  bigman_floating_base_lower_body.urdf.xacro  bigman_floating_base_whole_body.urdf.xacro
bigman_urdf/urdf/gazebo/: force_torque.gazebo.xacro  microstrain_3dmgx2_imu.gazebo.xacro  yarp_control.gazebo.xacro
bigman_urdf/urdf/parts/: forearms.urdf.xacro  legs.urdf.xacro
bigman_urdf/urdf/sensors/: multisense_sl.urdf.xacro
bigman_urdf/urdf_lower_body/: bigman.gv  bigman.urdf  bigman.urdf.xacro  bigman_base.urdf.xacro  bigman_config.urdf.xacro  bigman_robot.urdf.xacro
bigman_urdf/urdf_lower_body/config/: bigman.urdf.xacro  bigman_gazebo.urdf.xacro  bigman_only_upper_body.urdf.xacro  bigman_only_upper_body_gazebo.urdf.xacro
bigman_urdf/urdf_lower_body/gazebo/: bigman.gazebo.xacro  bigman_gazebo_ros_control.gazebo.xacro  bumper.gazebo.xacro
bigman_urdf/urdf_lower_body/parts/: arms.urdf.xacro  neck.urdf.xacro  pelvis_weight_bench.urdf.xacro  soft_hand.urdf.xacro  torso.urdf.xacro
custom_effort_controllers/: CMakeLists.txt  custom_effort_controllers_plugins.xml  package.xml
custom_effort_controllers/include/custom_effort_controllers/: joint_effort_controller.h  joint_group_effort_controller.h  joint_group_position_effort_controller.h  joint_position_controller.h  joint_position_effort_controller.h  joint_velocity_controller.h
custom_effort_controllers/msg/: Command.msg  CommandArray.msg  CommandArrayStamped.msg  CommandStamped.msg  JointCommand.msg
custom_effort_controllers/src/: joint_effort_controller.cpp  joint_group_effort_controller.cpp  joint_group_position_effort_controller.cpp  joint_position_controller.cpp  joint_position_effort_controller.cpp  joint_velocity_controller.cpp
